--- a/ctown3.ipynb
+++ b/ctown3.ipynb
@@ -104,6 +104,7 @@
    "outputs": [],
    "source": [
     "sensor_models = []\n",
+    "sensor_predicted = []\n",
     "accuracy = []\n",
     "precision = []\n",
     "recall = []\n",
@@ -111,15 +112,132 @@
     "for sens in sensors:\n",
     "    train_normal = X_normal.loc[:,sens].values\n",
     "    train_attack = X_attack.loc[:,sens].values\n",
-    "    model = Pipeline.Pipeline()\n",
+    "    model = Pipeline()\n",
     "    model.fit(train_normal,train_attack,lag,stride)\n",
     "    test = X_test.loc[:,sens].values\n",
     "    y_predicted = model.predict(test)\n",
+    "    sensor_predicted.append(y_predicted)\n",
     "    accuracy.append(accuracy_score(y_actual,y_predicted))\n",
     "    precision.append(precision_score(y_actual,y_predicted))\n",
     "    recall.append(recall_score(y_actual,y_predicted))\n",
     "    fscore.append(f1_score(y_actual,y_predicted))\n",
     "    sensor_models.append(model)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sensor_models[0].optimal_k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.003832613078545, 1.000002238728445, 1.0067339123707155]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[np.max(sensor_models[0].radii_normal[i]) for i in range(sensor_models[0].optimal_k)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sensor_predicted = np.asarray(sensor_predicted)\n",
+    "y_predicted = np.any(sensor_predicted,axis=0).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4264705882352941\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(precision_score(y_actual,y_predicted))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 0, ..., 1, 1, 1],\n",
+       "       [0, 0, 0, ..., 1, 1, 1],\n",
+       "       [0, 1, 0, ..., 1, 0, 1],\n",
+       "       ...,\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 1, ..., 1, 0, 0],\n",
+       "       [1, 1, 0, ..., 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sensor_predicted"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1,\n",
+       "       1, 1, 0, 0, 0, 1, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1,\n",
+       "       0, 0])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_actual"
    ]
   },
   {
@@ -132,7 +250,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -146,14 +264,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:26:10) \n[GCC 11.2.0]"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "53b584fcbb4de26fd06ec6c2cdf5e79eeceea3a87d14166bd7f17bce6a8842a5"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
