--- a/ctown3.ipynb
+++ b/ctown3.ipynb
@@ -4,18 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
-      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.WCDJNK7YVMPZQ2ME2ZZHJJRJ3JIKNDB7.gfortran-win_amd64.dll\n",
-      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -126,16 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "5"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,16 +135,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1.003832613078545, 1.000002238728445, 1.0067339123707155]"
+       "[1.0000030418655,\n",
+       " 1.0001754650988115,\n",
+       " 1.0148560844959322,\n",
+       " 1.0002027248840568,\n",
+       " 1.016248182694026]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,13 +192,13 @@
     {
      "data": {
       "text/plain": [
-       "array([[0, 1, 0, ..., 1, 1, 1],\n",
-       "       [0, 0, 0, ..., 1, 1, 1],\n",
-       "       [0, 1, 0, ..., 1, 0, 1],\n",
+       "array([[0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 1, 0],\n",
+       "       [1, 0, 1, ..., 0, 1, 0],\n",
        "       ...,\n",
        "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 1, ..., 1, 0, 0],\n",
-       "       [1, 1, 0, ..., 0, 0, 0]])"
+       "       [0, 1, 0, ..., 1, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0]])"
       ]
      },
      "execution_count": 14,
@@ -250,7 +243,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -266,7 +259,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "53b584fcbb4de26fd06ec6c2cdf5e79eeceea3a87d14166bd7f17bce6a8842a5"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
