pipeline,cluster and ctown3

--- a/ctown3.ipynb
+++ b/ctown3.ipynb
@@ -141,10 +141,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.788235294117647\n",
-      "Precision  0.7692307692307693\n",
+      "Accuracy  0.8117647058823529\n",
+      "Precision  0.8\n",
       "Recall  0.8695652173913043\n",
-      "F1-score  0.8163265306122449\n"
+      "F1-score  0.8333333333333333\n"
      ]
     }
    ],
@@ -164,10 +164,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5028727770177839 Median : 0.5058823529411764 Min : 0.4470588235294118 Max : 0.6235294117647059\n",
-      "precision - Mean: 0.6798311184939092 Median : 1.0 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.08998988877654196 Median : 0.08695652173913043 Min : 0.0 Max : 0.32608695652173914\n",
-      "f1 -        Mean: 0.15410990256134335 Median : 0.16 Min : 0.0 Max : 0.48387096774193544\n"
+      "Accuracy -  Mean: 0.503967168262654 Median : 0.5058823529411764 Min : 0.4470588235294118 Max : 0.6235294117647059\n",
+      "precision - Mean: 0.6998892580287929 Median : 1.0 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.08948432760364003 Median : 0.08695652173913043 Min : 0.0 Max : 0.30434782608695654\n",
+      "f1 -        Mean: 0.15406666955300782 Median : 0.16 Min : 0.0 Max : 0.4666666666666667\n"
      ]
     }
    ],
@@ -202,7 +202,7 @@
     "    train_normal = X_normal.loc[:,sens].values\n",
     "    train_attack = X_attack.loc[:,sens].values\n",
     "    model = Pipeline()\n",
-    "    model.fit(train_normal,train_attack,lag,stride,tune=False)\n",
+    "    model.fit(train_normal,train_attack,lag,stride,tune=False,kscore_init='inertia')\n",
     "    test = X_test.loc[:,sens].values\n",
     "    y_predicted = model.predict(test)\n",
     "    sensor_predicted.append(y_predicted)\n",
@@ -232,10 +232,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.5411764705882353\n",
-      "Precision  0.5411764705882353\n",
+      "Accuracy  0.5647058823529412\n",
+      "Precision  0.5542168674698795\n",
       "Recall  1.0\n",
-      "F1-score  0.7022900763358779\n"
+      "F1-score  0.7131782945736435\n"
      ]
     }
    ],
@@ -255,10 +255,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5105335157318742 Median : 0.5058823529411764 Min : 0.43529411764705883 Max : 0.6470588235294118\n",
-      "precision - Mean: 0.48810869247973887 Median : 0.5918367346938775 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.22093023255813954 Median : 0.2391304347826087 Min : 0.0 Max : 0.6304347826086957\n",
-      "f1 -        Mean: 0.2842612930740881 Median : 0.36065573770491804 Min : 0.0 Max : 0.6105263157894736\n"
+      "Accuracy -  Mean: 0.5242134062927497 Median : 0.5058823529411764 Min : 0.4 Max : 0.6470588235294118\n",
+      "precision - Mean: 0.5687677935339753 Median : 0.7272727272727273 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.19160768452982807 Median : 0.21739130434782608 Min : 0.0 Max : 0.45652173913043476\n",
+      "f1 -        Mean: 0.2733463696478415 Median : 0.3389830508474576 Min : 0.0 Max : 0.5753424657534246\n"
      ]
     }
    ],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
     "    train_normal = X_normal.loc[:,sens].values\n",
     "    train_attack = X_attack.loc[:,sens].values\n",
     "    model = Pipeline()\n",
-    "    model.fit(train_normal,train_attack,lag,stride)\n",
+    "    model.fit(train_normal,train_attack,lag,stride,kscore_init='inertia')\n",
     "    test = X_test.loc[:,sens].values\n",
     "    y_predicted = model.predict(test)\n",
     "    sensor_predicted.append(y_predicted)\n",
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -359,17 +359,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5656634746922024 Median : 0.5735294117647058 Min : 0.4852941176470588 Max : 0.6470588235294118\n",
-      "precision - Mean: 0.34877877076101665 Median : 0.43478260869565216 Min : 0.0 Max : 0.75\n",
-      "recall -    Mean: 0.19165998396150766 Median : 0.1724137931034483 Min : 0.0 Max : 0.5862068965517241\n",
-      "f1 -        Mean: 0.22309983286002688 Median : 0.2702702702702703 Min : 0.0 Max : 0.5555555555555556\n"
+      "Accuracy -  Mean: 0.5752393980848153 Median : 0.5735294117647058 Min : 0.45588235294117646 Max : 0.6911764705882353\n",
+      "precision - Mean: 0.3679325123840568 Median : 0.4166666666666667 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.12750601443464313 Median : 0.13793103448275862 Min : 0.0 Max : 0.3448275862068966\n",
+      "f1 -        Mean: 0.17957012451850698 Median : 0.21052631578947367 Min : 0.0 Max : 0.46511627906976755\n"
      ]
     }
    ],
@@ -381,11 +381,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Accuracy  0.5411764705882353\n",
+    "Precision  0.5411764705882353\n",
+    "Recall  1.0\n",
+    "F1-score  0.7022900763358779"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Accuracy  0.4264705882352941\n",
+    "Precision  0.4264705882352941\n",
+    "Recall  1.0\n",
+    "F1-score  0.5979381443298969"
+   ]
   }
  ],
  "metadata": {
