Corrhankel and ctown3

--- a/ctown3.ipynb
+++ b/ctown3.ipynb
@@ -126,10 +126,25 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 0, 0, 1, 1,\n",
+       "       1, 0, 0, 0, 0, 0, 1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 0, 0, 0, 0, 1, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sensor_predicted = np.asarray(sensor_predicted)\n",
-    "y_predicted = np.any(sensor_predicted,axis=0).astype(int)"
+    "y_predicted = np.any(sensor_predicted,axis=0).astype(int)\n",
+    "y_predicted"
    ]
   },
   {
@@ -142,9 +157,9 @@
      "output_type": "stream",
      "text": [
       "Accuracy  0.8117647058823529\n",
-      "Precision  0.8\n",
-      "Recall  0.8695652173913043\n",
-      "F1-score  0.8333333333333333\n"
+      "Precision  0.8125\n",
+      "Recall  0.8478260869565217\n",
+      "F1-score  0.8297872340425533\n"
      ]
     }
    ],
@@ -165,9 +180,9 @@
      "output_type": "stream",
      "text": [
       "Accuracy -  Mean: 0.503967168262654 Median : 0.5058823529411764 Min : 0.4470588235294118 Max : 0.6235294117647059\n",
-      "precision - Mean: 0.6998892580287929 Median : 1.0 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.08948432760364003 Median : 0.08695652173913043 Min : 0.0 Max : 0.30434782608695654\n",
-      "f1 -        Mean: 0.15406666955300782 Median : 0.16 Min : 0.0 Max : 0.4666666666666667\n"
+      "precision - Mean: 0.689327242524917 Median : 1.0 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.08998988877654197 Median : 0.08695652173913043 Min : 0.0 Max : 0.32608695652173914\n",
+      "f1 -        Mean: 0.15454224641655437 Median : 0.16 Min : 0.0 Max : 0.48387096774193544\n"
      ]
     }
    ],
@@ -217,10 +232,25 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sensor_predicted = np.asarray(sensor_predicted)\n",
-    "y_predicted = np.any(sensor_predicted,axis=0).astype(int)"
+    "y_predicted = np.any(sensor_predicted,axis=0).astype(int)\n",
+    "y_predicted"
    ]
   },
   {
@@ -232,10 +262,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.5647058823529412\n",
-      "Precision  0.5542168674698795\n",
+      "Accuracy  0.5764705882352941\n",
+      "Precision  0.5609756097560976\n",
       "Recall  1.0\n",
-      "F1-score  0.7131782945736435\n"
+      "F1-score  0.71875\n"
      ]
     }
    ],
@@ -255,10 +285,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5242134062927497 Median : 0.5058823529411764 Min : 0.4 Max : 0.6470588235294118\n",
-      "precision - Mean: 0.5687677935339753 Median : 0.7272727272727273 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.19160768452982807 Median : 0.21739130434782608 Min : 0.0 Max : 0.45652173913043476\n",
-      "f1 -        Mean: 0.2733463696478415 Median : 0.3389830508474576 Min : 0.0 Max : 0.5753424657534246\n"
+      "Accuracy -  Mean: 0.5181942544459645 Median : 0.5058823529411764 Min : 0.43529411764705883 Max : 0.6705882352941176\n",
+      "precision - Mean: 0.5539120160631789 Median : 0.6666666666666666 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.17795753286147625 Median : 0.15217391304347827 Min : 0.0 Max : 0.5217391304347826\n",
+      "f1 -        Mean: 0.2551599514779739 Median : 0.2456140350877193 Min : 0.0 Max : 0.6216216216216216\n"
      ]
     }
    ],
@@ -328,10 +358,25 @@
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1, 1, 1,\n",
+       "       1, 1])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sensor_predicted = np.asarray(sensor_predicted)\n",
-    "y_predicted = np.any(sensor_predicted,axis=0).astype(int)"
+    "y_predicted = np.any(sensor_predicted,axis=0).astype(int)\n",
+    "y_predicted"
    ]
   },
   {
@@ -343,10 +388,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy  0.4264705882352941\n",
-      "Precision  0.4264705882352941\n",
+      "Accuracy  0.4852941176470588\n",
+      "Precision  0.453125\n",
       "Recall  1.0\n",
-      "F1-score  0.5979381443298969\n"
+      "F1-score  0.6236559139784946\n"
      ]
     }
    ],
@@ -366,10 +411,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy -  Mean: 0.5752393980848153 Median : 0.5735294117647058 Min : 0.45588235294117646 Max : 0.6911764705882353\n",
-      "precision - Mean: 0.3679325123840568 Median : 0.4166666666666667 Min : 0.0 Max : 1.0\n",
-      "recall -    Mean: 0.12750601443464313 Median : 0.13793103448275862 Min : 0.0 Max : 0.3448275862068966\n",
-      "f1 -        Mean: 0.17957012451850698 Median : 0.21052631578947367 Min : 0.0 Max : 0.46511627906976755\n"
+      "Accuracy -  Mean: 0.5725034199726401 Median : 0.5735294117647058 Min : 0.47058823529411764 Max : 0.6470588235294118\n",
+      "precision - Mean: 0.3648536807709534 Median : 0.42857142857142855 Min : 0.0 Max : 1.0\n",
+      "recall -    Mean: 0.11868484362469925 Median : 0.06896551724137931 Min : 0.0 Max : 0.3103448275862069\n",
+      "f1 -        Mean: 0.1690612621888936 Median : 0.1212121212121212 Min : 0.0 Max : 0.4285714285714286\n"
      ]
     }
    ],
@@ -385,9 +430,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Accuracy  0.5411764705882353\n",
-    "Precision  0.5411764705882353\n",
-    "Recall  1.0\n",
+    "Accuracy  0.5411764705882353 \\\\\n",
+    "Precision  0.5411764705882353 \\\\\n",
+    "Recall  1.0 \\\\\n",
     "F1-score  0.7022900763358779"
    ]
   },
@@ -396,11 +441,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Accuracy  0.4264705882352941\n",
-    "Precision  0.4264705882352941\n",
-    "Recall  1.0\n",
+    "Accuracy  0.4264705882352941 \\\\\n",
+    "Precision  0.4264705882352941 \\\\\n",
+    "Recall  1.0 \\\\\n",
     "F1-score  0.5979381443298969"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
